[gd_scene load_steps=3 format=2]

[ext_resource path="res://EditPiece.tscn" type="PackedScene" id=1]
[ext_resource path="res://EditRow.gd" type="Script" id=2]

[node name="Row" type="HBoxContainer"]
margin_right = 225.0
margin_bottom = 32.0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" parent="." instance=ExtResource( 1 )]

[node name="1" parent="." instance=ExtResource( 1 )]
margin_left = 32.0
margin_right = 64.0

[node name="2" parent="." instance=ExtResource( 1 )]
margin_left = 64.0
margin_right = 96.0

[node name="3" parent="." instance=ExtResource( 1 )]
margin_left = 96.0
margin_right = 128.0

[node name="4" parent="." instance=ExtResource( 1 )]
margin_left = 128.0
margin_right = 160.0

[node name="5" parent="." instance=ExtResource( 1 )]
margin_left = 160.0
margin_right = 192.0

[node name="6" parent="." instance=ExtResource( 1 )]
margin_left = 192.0
margin_right = 224.0
[connection signal="hp_cursor" from="0" to="." method="_on_hp_cursor"]
[connection signal="piece_click" from="0" to="." method="_on_select_piece"]
[connection signal="piece_right_click" from="0" to="." method="_on_deselect_piece"]
[connection signal="select_cursor" from="0" to="." method="_on_select_cursor"]
[connection signal="hp_cursor" from="1" to="." method="_on_hp_cursor"]
[connection signal="piece_click" from="1" to="." method="_on_select_piece"]
[connection signal="piece_right_click" from="1" to="." method="_on_deselect_piece"]
[connection signal="select_cursor" from="1" to="." method="_on_select_cursor"]
[connection signal="hp_cursor" from="2" to="." method="_on_hp_cursor"]
[connection signal="piece_click" from="2" to="." method="_on_select_piece"]
[connection signal="piece_right_click" from="2" to="." method="_on_deselect_piece"]
[connection signal="select_cursor" from="2" to="." method="_on_select_cursor"]
[connection signal="hp_cursor" from="3" to="." method="_on_hp_cursor"]
[connection signal="piece_click" from="3" to="." method="_on_select_piece"]
[connection signal="piece_right_click" from="3" to="." method="_on_deselect_piece"]
[connection signal="select_cursor" from="3" to="." method="_on_select_cursor"]
[connection signal="hp_cursor" from="4" to="." method="_on_hp_cursor"]
[connection signal="piece_click" from="4" to="." method="_on_select_piece"]
[connection signal="piece_right_click" from="4" to="." method="_on_deselect_piece"]
[connection signal="select_cursor" from="4" to="." method="_on_select_cursor"]
[connection signal="hp_cursor" from="5" to="." method="_on_hp_cursor"]
[connection signal="piece_click" from="5" to="." method="_on_select_piece"]
[connection signal="piece_right_click" from="5" to="." method="_on_deselect_piece"]
[connection signal="select_cursor" from="5" to="." method="_on_select_cursor"]
[connection signal="hp_cursor" from="6" to="." method="_on_hp_cursor"]
[connection signal="piece_click" from="6" to="." method="_on_select_piece"]
[connection signal="piece_right_click" from="6" to="." method="_on_deselect_piece"]
[connection signal="select_cursor" from="6" to="." method="_on_select_cursor"]
